@@ -72,6 +72,7 @@ static zval *zend_std_call_getter(zval *object, zval *member TSRMLS_DC)
 	INIT_PZVAL(&__get_name);
 	ZVAL_STRINGL(&__get_name, ZEND_GET_FUNC_NAME, sizeof(ZEND_GET_FUNC_NAME)-1, 0);
 
+	SEPARATE_ARG_IF_REF(member);
 	call_args[0] = &member;
 
 	/* go call the __get handler */
@@ -87,11 +88,13 @@ static zval *zend_std_call_getter(zval *object, zval *member TSRMLS_DC)
 	   retval returns the value that is received
 	*/
 	
-
 	if (call_result == FAILURE) {
 		zend_error(E_ERROR, "Could not call __get handler for class %s", Z_OBJCE_P(object)->name);
 		return NULL;
 	}
+
+	zval_ptr_dtor(&member);
+
 	if (retval) {
 		retval->refcount--;
 	}
@@ -116,6 +119,7 @@ static int zend_std_call_setter(zval *object, zval *member, zval *value TSRMLS_D
 	INIT_PZVAL(&__set_name);
 	ZVAL_STRINGL(&__set_name, ZEND_SET_FUNC_NAME, sizeof(ZEND_SET_FUNC_NAME)-1, 0);
 
+	SEPARATE_ARG_IF_REF(member);
 	call_args[0] = &member;
 	value->refcount++;
 	call_args[1] = &value;
@@ -139,6 +143,7 @@ static int zend_std_call_setter(zval *object, zval *member, zval *value TSRMLS_D
 		return FAILURE;
 	}
 
+	zval_ptr_dtor(&member);
 	zval_ptr_dtor(&value);
 
 	if (retval && zend_is_true(retval)) {
@@ -383,11 +388,13 @@ zval *zend_std_read_dimension(zval *object, zval *offset, int type TSRMLS_DC)
 	if (instanceof_function_ex(ce, zend_ce_arrayaccess, 1 TSRMLS_CC)) {
 		if(offset == NULL) {
 			/* [] construct */
-			zval offset_null;
-			INIT_ZVAL(offset_null);
-			offset = &offset_null;
+			ALLOC_INIT_ZVAL(offset);
+		} else {
+			SEPARATE_ARG_IF_REF(offset);
 		}
 		zend_call_method_with_1_params(&object, ce, NULL, "offsetget", &retval, offset);
+
+		zval_ptr_dtor(&offset);
 
 		if (!retval) {
 			if (!EG(exception)) {
@@ -410,14 +417,15 @@ zval *zend_std_read_dimension(zval *object, zval *offset, int type TSRMLS_DC)
 static void zend_std_write_dimension(zval *object, zval *offset, zval *value TSRMLS_DC)
 {
 	zend_class_entry *ce = Z_OBJCE_P(object);
-	zval tmp;
 	
 	if (instanceof_function_ex(ce, zend_ce_arrayaccess, 1 TSRMLS_CC)) {
 		if (!offset) {
-			INIT_ZVAL(tmp);
-			offset = &tmp;
+			ALLOC_INIT_ZVAL(offset);
+		} else {
+			SEPARATE_ARG_IF_REF(offset);
 		}
 		zend_call_method_with_2_params(&object, ce, NULL, "offsetset", NULL, offset, value);
+		zval_ptr_dtor(&offset);
 	} else {
 		zend_error(E_ERROR, "Cannot use object of type %s as array", ce->name);
 	}
@@ -431,7 +439,9 @@ static int zend_std_has_dimension(zval *object, zval *offset, int check_empty TS
 	int result;
 	
 	if (instanceof_function_ex(ce, zend_ce_arrayaccess, 1 TSRMLS_CC)) {
+		SEPARATE_ARG_IF_REF(offset);
 		zend_call_method_with_1_params(&object, ce, NULL, "offsetexists", &retval, offset);
+		zval_ptr_dtor(&offset);
 		result = i_zend_is_true(retval);
 		zval_ptr_dtor(&retval);
 		return result;
@@ -516,7 +526,9 @@ static void zend_std_unset_dimension(zval *object, zval *offset TSRMLS_DC)
 	zval *retval;
 	
 	if (instanceof_function_ex(ce, zend_ce_arrayaccess, 1 TSRMLS_CC)) {
+		SEPARATE_ARG_IF_REF(offset);
 		zend_call_method_with_1_params(&object, ce, NULL, "offsetunset", &retval, offset);
+		zval_ptr_dtor(&offset);
 		zval_ptr_dtor(&retval);
 	} else {
 		zend_error(E_ERROR, "Cannot use object of type %s as array", ce->name);
